# eth_wallet_rs

./: .gitignore  Cargo.toml  LICENSE  README.md
.config/nushell/: config.nu  env.nu  history.txt
src/: eth_wallet.rs  main.rs  utils.rs
